@@ -432,7 +432,6 @@ class LogScriptEventSink < OSX::NSObject
   
   objc_method :onDblClick, 'v@:@'
   def onDblClick(e)
-    puts 'onDblClick'
     @owner.logView_onDoubleClick(e.to_s)
   end
   
