@@ -1,5 +1,10 @@
 2007-11-29  Satoshi Nakagawa <artension@gmail.com>
 
+	Made the paste sheet resizable.
+	Reformed PastieClient to use NSURLConnection.
+
+2007-11-29  Satoshi Nakagawa <artension@gmail.com>
+
 	Added settings for 3 pane layout.
 	Changed the default settings for a tab key event to complete nickname.
 
